--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,18 +8,18 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Weeding Home</a>
+      <%= link_to "Weeding Home", root_path, class: "navbar-brand", id: "logo" %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="#">Location Link <span class="sr-only">(current)</span></a></li>
+        <li><%= link_to "Messages", articles_path %></li>
         <li><a href="#">Gallary</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Wishes <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Add your wishes</a></li>
+            <li><%= link_to "Wish Them", new_article_path %></li>
             <li><a href="#">Read all wishes</a></li>
             <li><a href="#">comments</a></li>
           </ul>
