--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,4 +1,4 @@
 <div class="center jumbotron">
  <h1>Sagar and Swati</h1>
- <%= link_to "Their Story","#", class: "btn btn-primary btn-lg "%>
+  <%= link_to "Their Story", their_story_path(@welcome), class: "btn btn-primary btn-lg "%>
 </div>
