Footer is added to web page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -21,3 +21,9 @@ $navbar-default-bg: #f05c79;
 	font-weight: bold;
 }
 
+footer {
+	margin-top: 45px;
+	padding-top: 5px;
+	border-top: 1px solid #eaeaea;
+	
+}
