--- a/app/views/welcome/their_story.html.erb
+++ b/app/views/welcome/their_story.html.erb
@@ -1,3 +1,6 @@
-<div class="center jumbotron">
- 
-</div>
+<h1 align="center">Engagement Function</h1>
+<h2>Exchanging the Rings</h2>
+<%= image_tag("IMG_5347.JPG", size: "1150x800", :alt => "rss feed") %>
+<h2>With All new Verna</h2>
+<%= image_tag("Sagar_and_Swati.jpg", size: "1150x800", :alt => "rss feed") %>
+
