change in location page

--- a/app/views/welcome/location.html.erb
+++ b/app/views/welcome/location.html.erb
@@ -1,7 +1,6 @@
-<div class="center jumbotron">
- <h1>Location</h1>
- <p>Vitthal-Rukhmini Palace,</p>
- <P>Pandhapur Karad road,</p>
- <P>Near Panth Nagar,</p>
- <p>Pandharpur</p>
-</div>
+ <h1 align="center">Location</h1>
+ <p align="center">Vitthal-Rukhmini Palace,</p>
+ <P align="center">Pandhapur Karad road,</p>
+ <P align="center">Near Panth Nagar,</p>
+ <p align="center">Pandharpur</p>
+
