--- a/app/views/welcome/location.html.erb
+++ b/app/views/welcome/location.html.erb
@@ -1,6 +1,8 @@
- <h1 align="center">Location</h1>
- <p align="center">Vitthal-Rukhmini Palace,</p>
+ <h1 align="center">Venue</h1>
+ <p align="center">Vitthal-Rukhmini Lawns,</p>
  <P align="center">Pandhapur Karad road,</p>
  <P align="center">Near Panth Nagar,</p>
  <p align="center">Pandharpur</p>
-
+<div style="text-align:center;">
+    <a href="https://www.google.co.in/maps/place/Vitthal+Rukmini+Lawns/@17.6627514,75.3018788,16z/data=!4m12!1m6!3m5!1s0x3bc418024004ec91:0xbc5b9b2af4b92c9f!2sShree+Vitthal+Rukmini+Mandir!8m2!3d17.6774642!4d75.3360299!3m4!1s0x3bc41830949a847b:0x6b697b886535e74f!8m2!3d17.6633395!4d75.304901?hl=en" class="button">Go To Location</a>
+</div>
