--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,15 +14,14 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><%= link_to "Messages", articles_path %></li>
+        <li><%= link_to "Wish Them", new_article_path %></li>
         <li><%= link_to "Gallary",  their_story_path(@welcome) %></li>
-        <li><%= link_to "Location",  location_path(@welcome) %></li>
+        <li><%= link_to "Venue",  location_path(@welcome) %></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Wishes <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><%= link_to "Wish Them", new_article_path %></li>
-            <li><a href="#">Read all wishes</a></li>
-            <li><a href="#">comments</a></li>
+            <li><%= link_to "Messages", articles_path %></li>
           </ul>
         </li>
       </ul>
