Image is added to home page

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,3 +1,4 @@
+<%= image_tag("wedding.jpg", size: "1150x800", :alt => "rss feed") %>
 <div class="center jumbotron">
  <h1>Sagar and Swati</h1>
   <%= link_to "Their Story", their_story_path(@welcome), class: "btn btn-primary btn-lg "%>
