--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><%= link_to "Wish Them", new_article_path %></li>
-        <li><%= link_to "Gallary",  their_story_path(@welcome) %></li>
+        <li><%= link_to "Gallary",  gallary_path(@welcome) %></li>
         <li><%= link_to "Venue",  location_path(@welcome) %></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Wishes <span class="caret"></span></a>
