--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,3 +1,8 @@
+
+<div style="text-align:center;">
+  <%= image_tag("wedding.jpg", size: "800x600", :alt => "rss feed") %>    
+</div>
+
 <div class="center jumbotron">
  <h1>Sagar and Swati</h1>
   <%= link_to "Their Story", their_story_path(@welcome), class: "btn btn-primary btn-lg "%>
