Added their story

--- a/app/views/welcome/their_story.html.erb
+++ b/app/views/welcome/their_story.html.erb
@@ -1,3 +1,16 @@
- <h1 align="center">Sagar Bhalchandra Ukarande</h1>
- 
- <h1 align="center">Swati Bhaskar Jagtap</h1>
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1 align="center"><i><b>Sagar Bhalchandra Ukarande</b></i></h1>
+<blockquote><em> Sagar is elder son of <strong>Mr. Bhalchandra Namdeo Ukarande</strong> and <strong>Mrs. Prabahvati Bhalchandra Ukarande</strong>. 
+He is <strong>Mechanical Engineer</strong> working as a <strong>Scientist</strong> in <strong>VRDE Ahmadnagar</strong>. 
+His family live in <strong>Solapur</strong></em></blockquote> 
+
+<h1 align="center"><i><b>Swati Bhaskar Jagtap</b></i></h1>
+<blockquote><em> Swati is elder daughter of <strong>Mr. Bhaskar Ganpat Jagtap</strong>. 
+She is <strong>Computer Engineer</strong>.
+Her family live in <strong>Pandharpur</strong></em></blockquote></em></blockquote> 
+
+</body>
+</html>
