--- a/app/views/welcome/gallary.html.erb
+++ b/app/views/welcome/gallary.html.erb
@@ -1,8 +1,14 @@
 <h1 align="center">Engagement Function</h1>
-<h2>Exchanging the Rings</h2>
-<%= image_tag("IMG_5347.JPG", size: "575x400", :alt => "rss feed") %>
+<h2 align="center">Exchanging the Rings</h2>
+<div style="text-align:center;">
+  <%= image_tag("IMG_5347.JPG", size: "575x400", :alt => "rss feed") %>
+</div>
 
 <h1 align="center">In Solapur</h1>
-<h2>With All new Verna</h2>
-<%= image_tag("Sagar_and_Swati.jpg", size: "575x400", :alt => "rss feed") %>
+<h2 align="center">With All new Verna</h2>
+<div style="text-align:center;">
+  <%= image_tag("Sagar_and_Swati.jpg", size: "575x400", :alt => "rss feed") %>
+</div>
+
+
 
