--- a/app/views/welcome/their_story.html.erb
+++ b/app/views/welcome/their_story.html.erb
@@ -2,11 +2,17 @@
 <html>
 <body>
 
+<div style="text-align:center;">
+  <%= image_tag("IMG_5380.JPG", size: "400x400", :alt => "rss feed") %>
+</div>
 <h1 align="center"><i><b>Sagar Bhalchandra Ukarande</b></i></h1>
 <blockquote><em> Sagar is elder son of <strong>Mr. Bhalchandra Namdeo Ukarande</strong> and <strong>Mrs. Prabahvati Bhalchandra Ukarande</strong>. 
 He is <strong>Mechanical Engineer</strong> working as a <strong>Scientist</strong> in <strong>VRDE Ahmadnagar</strong>. 
 His family live in <strong>Solapur</strong></em></blockquote> 
 
+<div style="text-align:center;">
+  <%= image_tag("IMG_5267.JPG", size: "400x400", :alt => "rss feed") %>
+</div>
 <h1 align="center"><i><b>Swati Bhaskar Jagtap</b></i></h1>
 <blockquote><em> Swati is elder daughter of <strong>Mr. Bhaskar Ganpat Jagtap</strong>. 
 She is <strong>Computer Engineer</strong>.
