--- a/app/views/welcome/their_story.html.erb
+++ b/app/views/welcome/their_story.html.erb
@@ -6,15 +6,17 @@
   <%= image_tag("IMG_5380.JPG", size: "400x400", :alt => "rss feed") %>
 </div>
 <h1 align="center"><i><b>Sagar Bhalchandra Ukarande</b></i></h1>
-<blockquote><em> Sagar is elder son of <strong>Mr. Bhalchandra Namdeo Ukarande</strong> and <strong>Mrs. Prabahvati Bhalchandra Ukarande</strong>. 
-He is <strong>Mechanical Engineer</strong> working as a <strong>Scientist</strong> in <strong>VRDE Ahmadnagar</strong>. 
+<blockquote><em> Sagar is elder son of <strong>Shri. Bhalchandra Namdeo Ukarande</strong> and <strong>Smt. Prabhavati Bhalchandra Ukarande</strong>.
+Sagar has one young brother whose name is <strong>Akash Bhalchandra Ukarande</strong>.
+Sagar is <strong>Mechanical Engineer</strong>.  
 His family live in <strong>Solapur</strong></em></blockquote> 
 
 <div style="text-align:center;">
   <%= image_tag("IMG_5267.JPG", size: "400x400", :alt => "rss feed") %>
 </div>
 <h1 align="center"><i><b>Swati Bhaskar Jagtap</b></i></h1>
-<blockquote><em> Swati is elder daughter of <strong>Mr. Bhaskar Ganpat Jagtap</strong>. 
+<blockquote><em> Swati is elder daughter of <strong>Shri. Bhaskar Ganpat Jagtap</strong> and <strong>Smt.Jayashree Bhaskar Jagtap</strong>.
+She has two young brothers named <strong>Dheeraj Bhaskar Jagtap</strong> and <strong>Suraj Bhaskar Jagtap</strong>
 She is <strong>Computer Engineer</strong>.
 Her family live in <strong>Pandharpur</strong></em></blockquote></em></blockquote> 
 
