Correcting splling mistakes

--- a/app/views/welcome/their_story.html.erb
+++ b/app/views/welcome/their_story.html.erb
@@ -16,7 +16,7 @@ His family live in <strong>Solapur</strong></em></blockquote>
 </div>
 <h1 align="center"><i><b>Swati Bhaskar Jagtap</b></i></h1>
 <blockquote><em> Swati is elder daughter of <strong>Shri. Bhaskar Ganpat Jagtap</strong> and <strong>Smt.Jayashree Bhaskar Jagtap</strong>.
-She has two young brothers named <strong>Dheeraj Bhaskar Jagtap</strong> and <strong>Suraj Bhaskar Jagtap</strong>
+She has two young brothers named <strong>Dheeraj Bhaskar Jagtap</strong> and <strong>Suraj Bhaskar Jagtap</strong>.
 She is <strong>Computer Engineer</strong>.
 Her family live in <strong>Pandharpur</strong></em></blockquote></em></blockquote> 
 
