Added gift images

--- a/app/views/welcome/their_story.html.erb
+++ b/app/views/welcome/their_story.html.erb
@@ -20,5 +20,12 @@ She has two young brothers named <strong>Dheeraj Bhaskar Jagtap</strong> and <st
 She is <strong>Computer Engineer</strong>.
 Her family live in <strong>Pandharpur</strong></em></blockquote></em></blockquote> 
 
+<h1 align="center"><i><b>Special gift to Sagar from Swati on his Bday</b></i></h1>
+<div style="text-align:center;">
+  <%= image_tag("gift4.jpg", size: "400x400", :alt => "rss feed") %>
+  <%= image_tag("gift3.jpg", size: "400x400", :alt => "rss feed") %>
+  <%= image_tag("gift2.jpg", size: "400x400", :alt => "rss feed") %>
+  <%= image_tag("gift1.jpg", size: "400x400", :alt => "rss feed") %>
+</div>
 </body>
 </html>
