Added some new photos

--- a/app/views/welcome/their_story.html.erb
+++ b/app/views/welcome/their_story.html.erb
@@ -20,6 +20,30 @@ She has two young brothers named <strong>Dheeraj Bhaskar Jagtap</strong> and <st
 She is <strong>Computer Engineer</strong>.
 Her family live in <strong>Pandharpur</strong></em></blockquote></em></blockquote> 
 
+<h1 align="center"><i><b>Engagement</b></i></h>
+<blockquote><em> They got engaged on <strong>28th May 2017</strong> in <strong>Pandharpur</strong>.</em></blockquote>
+
+<h2 align="center"><i><b>Happy Couple..!</b></i></h2>
+<div style="text-align:center;">
+  <%= image_tag("IMG_5348.JPG", size: "575x400", :alt => "rss feed") %>
+</div>
+
+<h2 align="center"><i><b>With Swati's Parents</b></i></h2>
+<div style="text-align:center;">
+  <%= image_tag("IMG_5408.JPG", size: "575x400", :alt => "rss feed") %>
+</div>
+
+<h2 align="center"><i><b>With Sagar's Parents</b></i></h2>
+<div style="text-align:center;">
+  <%= image_tag("IMG_5426.JPG", size: "575x400", :alt => "rss feed") %>
+</div>
+
+<h2 align="center"><i><b>With Ukarande Family</b></i></h2>
+<div style="text-align:center;">
+  <%= image_tag("IMG_5382.JPG", size: "575x400", :alt => "rss feed") %>
+</div>
+
+
 <h1 align="center"><i><b>Special gift to Sagar from Swati on his Bday</b></i></h1>
 <div style="text-align:center;">
   <%= image_tag("gift4.jpg", size: "400x400", :alt => "rss feed") %>
