--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -4,10 +4,8 @@
 </div>
 
 <div class="center jumbotron">
- <h1>Sagar and Swati</h1>
+ <h1 style="color:#ff6933";>Sagar and Swati</h1>
   <%= link_to "Their Story", their_story_path(@welcome), class: "btn btn-primary btn-lg "%>
 </div>
-
-
 
 
