--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,11 +1,9 @@
-
 <div style="text-align:center;">
-  <%= image_tag("wedding.jpg", size: "725x600", :alt => "rss feed") %>    
+  <%= image_tag("Welcome.jpg", size: "600x600", :alt => "rss feed") %>    
 </div>
 
 <div class="center jumbotron">
- <h1 style="color:#ff6933";>Sagar and Swati</h1>
-  <%= link_to "Their Story", their_story_path(@welcome), class: "btn btn-primary btn-lg "%>
+  <%= link_to "Their Story", their_story_path(@welcome), class: "btn btn-primary btn-lg btn-xlarge"%>
 </div>
 
 
