--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,11 +14,11 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><%= link_to "Wish Them", new_article_path %></li>
-        <li><%= link_to "Gallery",  gallary_path(@welcome) %></li>
-        <li><%= link_to "Venue",  location_path(@welcome) %></li>
+        <li><%= link_to "Wish Them", new_article_path, id: "logo2" %></li>
+        <li><%= link_to "Gallery",  gallary_path(@welcome), id: "logo3" %></li>
+        <li><%= link_to "Venue",  location_path(@welcome), id: "logo4" %></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Wishes <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Wishes <span class="caret", id: "logo5" ></span></a>
           <ul class="dropdown-menu">
             <li><%= link_to "Wish Them", new_article_path %></li>
             <li><%= link_to "Messages", articles_path %></li>
