--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -31,19 +31,19 @@ $navbar-default-bg: #ee4466;
 	background-image: asset-url('wedding.jpg');
 	background-size: cover;
 	height: 750px;
+	width: 900px;
 }
 
 .jumbotron {
 	color: #000;
 	text-align: center;
-	margin-bottom: 30px;
 	letter-spacing: -1px;
 	font-weight: bold;
 }
 
 .btn-xlarge{
 	font-size: 1.7em;
-	margin-top: 400px;
+	margin-top: 350px;
 }
 
 footer {
