--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -23,6 +23,14 @@ $navbar-default-bg: #ee4466;
 	color: white;
 }
 
+#logo5{
+	color: black;
+}
+
+#logo6{
+	color: black;
+}
+
 .nav.navbar-nav li a {
    color: white;
  }
