--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -20,8 +20,8 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Wishes <span class="caret", id: "logo5" ></span></a>
           <ul class="dropdown-menu">
-            <li><%= link_to "Wish Them", new_article_path %></li>
-            <li><%= link_to "Messages", articles_path %></li>
+            <li><%= link_to "Wish Them", new_article_path, id: "logo5" %></li>
+            <li><%= link_to "Messages", articles_path, id: "logo46" %></li>
           </ul>
         </li>
       </ul>
