--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -39,6 +39,7 @@ $navbar-default-bg: #ee4466;
 	background-image: asset-url('wedding.jpg');
 	background-size: cover;
 	height: 750px;
+	margin-left:15px;
 }
 
 .jumbotron {
