--- a/app/views/welcome/their_story.html.erb
+++ b/app/views/welcome/their_story.html.erb
@@ -3,18 +3,18 @@
 <body>
 
 <div style="text-align:center;">
-  <%= image_tag("IMG_5380.JPG", size: "400x400", :alt => "rss feed") %>
+  <%= image_tag("IMG_5493.JPG", size: "400x500", :alt => "rss feed") %>
 </div>
 <h1 align="center"><i><b>Sagar Bhalchandra Ukarande</b></i></h1>
-<blockquote><em>Sagar, a <strong>Mechanical Engineer</strong> and <strong>Scientist in DRDO</strong> by profession is elder son of <strong>Shri. Bhalchandra Namdeo Ukarande</strong> and <strong>Sou. Prabhavati Bhalchandra Ukarande</strong>.
+<blockquote><em>Sagar is elder son of <strong>Shri. Bhalchandra Namdeo Ukarande</strong> and <strong>Sou. Prabhavati Bhalchandra Ukarande</strong>.
 Sagar has one young brother whose name is <strong>Akash Bhalchandra Ukarande</strong>.
 Perfect squared family live in <strong>Solapur</strong></em></blockquote> 
 
 <div style="text-align:center;">
-  <%= image_tag("IMG_5267.JPG", size: "400x400", :alt => "rss feed") %>
+  <%= image_tag("IMG_5501.JPG", size: "400x500", :alt => "rss feed") %>
 </div>
 <h1 align="center"><i><b>Swati Bhaskar Jagtap</b></i></h1>
-<blockquote><em> Swati is elder daughter of <strong>Shri. Bhaskar Ganpat Jagtap</strong> and <strong>So.Jayashree Bhaskar Jagtap</strong>.
+<blockquote><em> Swati is elder daughter of <strong>Shri. Bhaskar Ganpat Jagtap</strong> and <strong>Sou.Jayashree Bhaskar Jagtap</strong>.
 She has two young brothers named <strong>Dheeraj Bhaskar Jagtap</strong> and <strong>Suraj Bhaskar Jagtap</strong>.
 She is <strong>Computer Engineer</strong>.
 Her family live in <strong>Pandharpur</strong></em></blockquote></em></blockquote> 
