--- a/app/views/welcome/location.html.erb
+++ b/app/views/welcome/location.html.erb
@@ -1,3 +1,7 @@
+<div style="text-align:center;">
+  <%= image_tag("Vitthal.png", size: "600x600", :alt => "rss feed") %>    
+</div>
+
  <h1 align="center">Venue</h1>
  <p align="center">Vitthal-Rukhmini Lawns,</p>
  <P align="center">Pandhapur Karad road,</p>
