--- a/app/views/welcome/their_story.html.erb
+++ b/app/views/welcome/their_story.html.erb
@@ -5,19 +5,13 @@
 <div style="text-align:center;">
   <%= image_tag("IMG_5493.JPG", size: "400x500", :alt => "rss feed") %>
 </div>
-<h1 align="center"><i><b>Sagar Bhalchandra Ukarande</b></i></h1>
-<blockquote><em>Sagar is elder son of <strong>Shri. Bhalchandra Namdeo Ukarande</strong> and <strong>Sou. Prabhavati Bhalchandra Ukarande</strong>.
-Sagar has one young brother whose name is <strong>Akash Bhalchandra Ukarande</strong>.
-Perfect squared family live in <strong>Solapur</strong></em></blockquote> 
+<h1 align="center"><i><b>Sagar</b></i></h1>
+
 
 <div style="text-align:center;">
   <%= image_tag("IMG_5501.JPG", size: "400x500", :alt => "rss feed") %>
 </div>
-<h1 align="center"><i><b>Swati Bhaskar Jagtap</b></i></h1>
-<blockquote><em> Swati is elder daughter of <strong>Shri. Bhaskar Ganpat Jagtap</strong> and <strong>Sou.Jayashree Bhaskar Jagtap</strong>.
-She has two young brothers named <strong>Dheeraj Bhaskar Jagtap</strong> and <strong>Suraj Bhaskar Jagtap</strong>.
-She is <strong>Computer Engineer</strong>.
-Her family live in <strong>Pandharpur</strong></em></blockquote></em></blockquote> 
+<h1 align="center"><i><b>Swati</b></i></h1>
 
 <h1 align="center"><i><b>Engagement</b></i></h>
 <blockquote><em> They got engaged on <strong>28th May 2017</strong> in <strong>Pandharpur</strong>.</em></blockquote>
